--- a/frontend/src/styles/job-list.css
+++ b/frontend/src/styles/job-list.css
@@ -24,7 +24,7 @@
   grid-template-columns: var(--grid-template-jobs);
   border-bottom: 1px solid #dbdbf3;
   padding: 10px;
-  width: calc(99% - 10px);
+  width: calc(100% - 10px);
 }
 
 .job-card {
@@ -33,7 +33,7 @@
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   margin-top: 10px;
   margin-bottom: 10px;
-  height: 75px;
+  height: calc(0.12 * 100vh);
   border-radius: var(--border-radius);
   padding: 10px;
   cursor: pointer;
